--- a/portfolio.html
+++ b/portfolio.html
@@ -14,14 +14,14 @@
 </head>
 
 <body>
-<header>
+<header class="header">
     <div class="container header-container">
-        <a lang="en" href="./index.html" class="logo">Web<span class="studio">Studio</span></a>
-        <nav class="nav-part">
-            <ul class="nav-list">
-            <li class="list"><a href="./index.html" class="link">Студія</a></li>
-            <li class="list"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-            <li class="list"><a href="#" class="link">Контакти</a></li>
+        <a lang="en" href="./index.html" class="logo header__logo">Web<span class="studio">Studio</span></a>
+        <nav class="navigation">
+            <ul class="navigation__nav-list">
+                <li class="navigation__list list"><a href="./index.html" class="navigation__link link">Студія</a></li>
+            <li class="navigation__list list"><a href="./portfolio.html" class="navigation__link link current">Портфоліо</a></li>
+            <li class="navigation__list list"><a href="#" class="navigation__link link">Контакти</a></li>
         </ul>
     </nav>
 
