Components/Footer-btn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+  
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
@@ -56,7 +56,7 @@
         <section class="hero " >
             <div class="container">
             <h1 class="heading">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="button" data-modal-open>Замовити послугу</button>
+            <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
         </div>
         </section>
 
@@ -346,7 +346,7 @@
         
         
     </main>
-    <footer>
+    <footer class="footer">
         <div class="container footer-container">
             <div class="address-container">
                 <a lang="en" href="./index.html" class="logo footer-logo">Web<span class="logo-studio">Studio</span></a>
