--- a/index.html
+++ b/index.html
@@ -416,10 +416,8 @@
     <div class="backdrop is-hidden " data-modal>
         <div class="modal">
              <button type="button" class="modal-close" data-modal-close>
-                <svg class="close-icon" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
-                    <path
-                        d="M15 4.108 13.892 3 9.5 7.392 5.108 3 4 4.108 8.392 8.5 4 12.892 5.108 14 9.5 9.608 13.892 14 15 12.892 10.608 8.5 15 4.108Z"
-                        fill="#000" />
+                <svg class="close-btn__icon" width="18" height="18" >
+                <use href="./images/icons.svg#icon-close"></use>
                 </svg>
              </button>
             
@@ -492,7 +490,7 @@
                     <use href="./images/icons.svg#icon-check"></use>
                 </svg>
                 </span>
-                 Погоджуюся з розсилкою та приймаю. &nbsp;<a href="#" class="condition">  Умови договору  </a> 
+                 Погоджуюся з розсилкою та приймаю &nbsp;<a href="#" class="condition">  Умови договору  </a> 
             </label>
             </div>
       
