--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 </address>
             </div>
     
-            <div class="socio socio-content container">
+            <div class="socio socio-content ">
                 <p class="socio__tittle">приєднуйтесь </p>
                 <ul class="socio__list list">
                     <li class="socio__item">
